// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiImage is rendered 1`] = `
<figure
  class="euiImage euiImage--large testClass1 testClass2"
  role="figure"
>
  <img
    alt="alt"
    aria-label="aria-label"
    class="euiImage__img"
    data-test-subj="test subject string"
    src="/cat.jpg"
  />
</figure>
`;

exports[`EuiImage is rendered and allows full screen 1`] = `
<figure
  class="euiImage euiImage--large euiImage--allowFullScreen testClass1 testClass2"
  role="figure"
>
  <button
    aria-label="Open full screen alt image"
    class="euiImage__button"
    type="button"
  >
    <img
      alt="alt"
      aria-label="aria-label"
      class="euiImage__img"
      data-test-subj="test subject string"
      src="/cat.jpg"
    />
    <div
      class="euiImage__icon"
      color="ghost"
      data-euiicon-type="fullScreen"
    />
  </button>
</figure>
`;
